hphp/test/slow/parser/initializer-static-4.php.expectf

Fatal error: Invalid expression in constant initializer in %s/initializer-static-4.php on line 3
